--- a/signal.html
+++ b/signal.html
@@ -223,21 +223,46 @@ function resetOut(){document.getElementById('out').textContent='';}
 function toggleSelectAll(){const checkboxes=document.querySelectorAll('#assetBox input[type="checkbox"]'); const allChecked=Array.from(checkboxes).every(c=>c.checked); checkboxes.forEach(c=>c.checked=!allChecked);}
 
 // -------------------- License System --------------------
-let validLicenses={};
+const validLicenses = [
+  {key:"LIC-12345",device:"",expiry:"2025-12-31"},
+  {key:"LIC-67890",device:"",expiry:"2025-12-31"}
+];
+function getDeviceID(){return "DEV-"+btoa(navigator.userAgent).substring(0,12);}
+function checkLicense(licenseKey){
+  const devID=getDeviceID();
+  const lic=validLicenses.find(l=>l.key===licenseKey);
+  if(!lic) return {ok:false,msg:"Invalid License"};
+  const now=new Date();
+  if(new Date(lic.expiry)<now) return {ok:false,msg:"License Expired"};
+  if(lic.device!=="" && lic.device!==devID) return {ok:false,msg:"License is locked to another device"};
+  lic.device=devID;
+  localStorage.setItem("license",JSON.stringify({key:licenseKey,device:devID}));
+  return {ok:true,msg:"License Valid"};
+}
+
 function showLicensePopup(){
     const overlay=document.createElement("div");
-    overlay.style.position="fixed"; overlay.style.top="0"; overlay.style.left="0"; overlay.style.width="100%"; overlay.style.height="100%"; overlay.style.background="rgba(0,0,0,0.9)"; overlay.style.display="flex"; overlay.style.justifyContent="center"; overlay.style.alignItems="center"; overlay.style.zIndex="9999";
-    const box=document.createElement("div"); box.style.background="#000"; box.style.border="2px solid #0f0"; box.style.padding="30px"; box.style.borderRadius="12px"; box.style.maxWidth="400px"; box.style.width="90%"; box.style.color="#0f0"; box.style.fontFamily="'Share Tech Mono', monospace"; box.style.textAlign="center"; box.style.boxShadow="0 0 25px #0f0";
-    box.innerHTML=`<h2>🛡 License Verification 🛡</h2>
-        <p>Enter your <b>License Key</b> below:</p>
-        <input type="text" id="popupLicense" placeholder="Enter License Key" style="width:90%;padding:10px;margin:10px 0;background:#000;border:1px solid #0f0;color:#0f0;border-radius:6px;font-size:14px;">
-        <button id="popupSubmit" style="margin-top:12px;padding:10px 20px;background:linear-gradient(90deg,#00ff0f,#00cc8a);border:none;color:#000;font-weight:bold;border-radius:8px;cursor:pointer;">Submit</button>
-        <button id="popupClose" style="margin-top:12px;padding:8px 15px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;cursor:pointer;margin-left:10px;">Close</button>`;
-    overlay.appendChild(box); document.body.appendChild(overlay);
-    document.getElementById("popupClose").onclick=()=>document.body.removeChild(overlay);
+    overlay.style.cssText="position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.9);display:flex;justify-content:center;align-items:center;z-index:9999";
+    const box=document.createElement("div");
+    box.style.cssText="background:#000;border:2px solid #0f0;padding:30px;border-radius:12px;max-width:400px;width:90%;color:#0f0;font-family:'Share Tech Mono',monospace;text-align:center;box-shadow:0 0 25px #0f0";
+    box.innerHTML=`
+      <h2>🛡 Hacking System 🛡</h2>
+      <p>Enter your <b>License Key</b> below to access signals.</p>
+      <input type="text" id="popupLicense" placeholder="Enter License Key" style="width:90%;padding:10px;margin:10px 0;background:#000;border:1px solid #0f0;color:#0f0;border-radius:6px;font-size:14px;">
+      <p>Create account → <a href="https://broker-qx.pro/sign-up/?lid=1508486" target="_blank" style="color:#0f0;text-decoration:underline;font-weight:bold;">Click Here</a></p>
+      <p>Deposit <b>20$</b> to get your license.</p>
+      <p>Contact on Telegram → <a href="https://t.me/traderParvej" target="_blank" style="color:#0f0;text-decoration:underline;font-weight:bold;">@traderParvej</a></p>
+      <button id="popupSubmit" style="margin-top:12px;padding:10px 20px;background:linear-gradient(90deg,#00ff0f,#00cc8a);border:none;color:#000;font-weight:bold;border-radius:8px;cursor:pointer;">Submit</button>
+      <button id="popupClose" style="margin-top:12px;padding:8px 15px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;cursor:pointer;margin-left:10px;">Close</button>
+    `;
+    overlay.appendChild(box);
+    document.body.appendChild(overlay);
+    document.getElementById("popupClose").onclick=()=>{document.body.removeChild(overlay);}
     document.getElementById("popupSubmit").onclick=()=>{
-        document.body.removeChild(overlay);
-        generateSignals(parseInt(document.getElementById('count').value)||5);
+      const key=document.getElementById("popupLicense").value.trim();
+      const res=checkLicense(key);
+      if(res.ok){document.body.removeChild(overlay);generateSignals(parseInt(document.getElementById('count').value)||5);}
+      else alert(res.msg);
     }
 }
 
@@ -253,7 +278,7 @@ document.getElementById('panelTitle').addEventListener('click',()=>{
   }
 });
 function hideAdmin(){adminPanel.style.display="none";}
-function giveLicense(){const device=document.getElementById("newDevice").value.trim(); const expiry=document.getElementById("newExpiry").value; if(!device||!expiry){alert("Fill all fields!"); return;} validLicenses[device]={expiry:expiry,device:device}; alert("License saved!");}
+function giveLicense(){const device=document.getElementById("newDevice").value.trim(); const expiry=document.getElementById("newExpiry").value; if(!device||!expiry){alert("Fill all fields!"); return;} validLicenses.push({key:"LIC-"+Math.floor(Math.random()*99999),device:device,expiry:expiry}); alert("License saved!");}
 </script>
 </body>
 </html>
